# apache-beam-dummy-streaming-pipeline

./: .gitignore  docker-compose.yaml  kafka_consumer.py  kafka_producer.py  pipeline.py  pyproject.toml  readme.MD  requirements.txt
config/: local.yaml
db-init-scripts/: create.sql  create_db.sh 
kafka-init/: kafka-init.sh
pipelines/global_supplier_to_retio/: flex_template.json  pipeline.py  readme.MD  setup.py
pipelines/global_supplier_to_retio/dev-resources/: docker-compose.yaml  kafka_consumer.py  kafka_producer.py  readme.MD
pipelines/global_supplier_to_retio/parametrization/DEV/: config.yaml
pipelines/global_supplier_to_retio/parametrization/LOCAL/: config.yaml
pipelines/global_supplier_to_retio/parametrization/PROD/: config.yaml
pipelines/global_supplier_to_retio/parametrization/STAGE/: config.yaml
pipelines/global_supplier_to_retio/src/: schema_standardizer.py
pipelines/global_supplier_to_retio/tests/unit_tests/: test_schema_standardizer.py
pipelines/global_supplier_to_retio/utils/: gcp_utils.py  kafka_utils.py  pipeline_utils.py  read_configs.py
schema_standardization/: leyland_mapping.yaml
src/: mapping.yaml  schema_standardizer.py
tests/unit_tests/: test_schema_standardizer.py
