[build-system]
requires      = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name    = "your_project"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]          # makes `src` importable as a package
testpaths  = ["tests"]